@@ -59,4 +59,5 @@
  5277 GNU APL 1.2 release
  5291 Support files for dyalog keyboards added
  5320 Made ⎕-names case insensitive, map alternate chars in )OUT
-
+ 5420 fixed ⎕TS and ⎕TZ computation
+ 5424 locale patches from Robin
